--- a/HomeMates/VIew/Statistics/PointGoalTableViewCell.xib
+++ b/HomeMates/VIew/Statistics/PointGoalTableViewCell.xib
@@ -21,13 +21,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="任務名稱底家" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lLt-0e-Ttq">
-                        <rect key="frame" x="90" y="93" width="92" height="15.5"/>
+                        <rect key="frame" x="78" y="49" width="92" height="59.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.29019607843137257" green="0.22352941176470589" blue="0.18431372549019609" alpha="0.90000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="這裡是家庭成員的名字" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="60X-OY-fFz">
-                        <rect key="frame" x="90" y="71" width="163.5" height="18"/>
+                        <rect key="frame" x="78" y="27" width="163.5" height="18"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="18" id="I9A-Gh-ZUa"/>
                         </constraints>
@@ -36,7 +36,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="目前暫無設定目標" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XV8-hV-5bd">
-                        <rect key="frame" x="90" y="111.5" width="207" height="21"/>
+                        <rect key="frame" x="78" y="111.5" width="219" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="obV-b0-lmN"/>
                         </constraints>
@@ -45,16 +45,16 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jfx-5C-yjY">
-                        <rect key="frame" x="90" y="116.5" width="207" height="6"/>
+                        <rect key="frame" x="78" y="116.5" width="219" height="6"/>
                         <color key="backgroundColor" red="0.9882352941176471" green="0.8784313725490196" blue="0.46274509803921571" alpha="0.38222388698630139" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="6" id="iNP-as-cvm"/>
                         </constraints>
                     </view>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Gi3-P3-wIi">
-                        <rect key="frame" x="30" y="0.0" width="48" height="138.5"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Target_48px" translatesAutoresizingMaskIntoConstraints="NO" id="Gi3-P3-wIi">
+                        <rect key="frame" x="30" y="0.0" width="36" height="138.5"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="48" id="RfJ-2b-Jsx"/>
+                            <constraint firstAttribute="width" constant="36" id="RfJ-2b-Jsx"/>
                         </constraints>
                     </imageView>
                 </subviews>
@@ -87,6 +87,7 @@
         </tableViewCell>
     </objects>
     <resources>
+        <image name="Target_48px" width="49" height="49"/>
         <namedColor name="P1">
             <color red="0.62000000476837158" green="0.2199999988079071" blue="0.32499998807907104" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
